# simple-pkce-demo

./: README.md  pyproject.toml
pkceclient/: package-lock.json  package.json  webpack.config.js
pkceclient/src/: SecuredApp.js  index.js
pkceserver/: READM.md  manage.py
pkceserver/pkceserver/: asgi.py  settings.py  urls.py  wsgi.py
pkceserver/pkceserver/templates/registration/: login.html
