[tool.poetry]
name = "pkce-poc"
version = "0.1.0"
description = ""
authors = ["Paulo Rodrigues <paulorodriguesxv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.13.1"
django-oauth-toolkit = "^2.0.0"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
